fix some mobile layout problems

--- a/client/src/components/sign-in/sign-in.styles.scss
+++ b/client/src/components/sign-in/sign-in.styles.scss
@@ -18,9 +18,5 @@
   .sign-in {
     width: 100%;
     padding: 0 40px;
-
-    .buttons-container {
-      justify-content: center;
-    }
   }
 }
